Reorganization and adding null as the elliptic curve neutral eleemnt

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,10 @@
         "module": "commonjs",
         "strict": true,
         "noEmitOnError": true,
+        "strictNullChecks": false,
         "sourceMap": true,
         "rootDir": ".",
-        "outDir": "bin"
+        "outDir": "build"
     },
     "exclude": [
         "bin/*"
