--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
     "mocha": "^10.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "bigint-rnd": "^1.0.2",
+    "sha3": "^2.1.4"
   }
 }
